Fix notes scrollbars

--- a/css/index.styl
+++ b/css/index.styl
@@ -71,12 +71,12 @@ body
     height: 40px
     padding: 5 44px
     border-top: 1px #E6E6E6 solid
+    overflow: hidden
   100%
     height: 0
     padding: 0 44px
     border-top: 1px transparent solid
-
-
+    overflow: hidden
 
 // --------------------
 //     HEADER
@@ -337,14 +337,14 @@ header
 
         // Buttons
         .right-controls
-          display: none
+
           abs(0, 0, auto, auto)
           text-align: right
           font-size: 0
 
         // Trash Can
         .delete
-          display: inline-block
+          display: none
           background: url("img/trashcan_grey.png") 50% 50% no-repeat
           width: 25px
           height: 29px
@@ -356,7 +356,7 @@ header
             opacity: 0.8
 
         .priority-button
-          display: inline-block
+          display: none
           padding: 0 10px
           height: 29px
           vertical-align: top
@@ -388,11 +388,12 @@ header
         img
           vertical-align: top
           padding: 9px 0
+          display: none
 
         .date
           height: 29px
           line-height: 20px
-          display: inline-block
+          display: none
           vertical-align: top
           font-size: 12px
           color: #999
@@ -419,6 +420,9 @@ header
           &::-webkit-scrollbar-track
             margin: 10px 0
 
+          &::-webkit-scrollbar
+            width: 0
+
           &.placeholder
             font-style: italic
             color: hsl(0,0,40%)
@@ -438,7 +442,7 @@ header
           margin: 5px 0
 
           // Show right buttons
-          .right-controls
+          .date, .delete, .priority-button, img
             display: inline-block
 
           .name
@@ -462,6 +466,9 @@ header
 
             &.auto
               height: auto
+
+              &::-webkit-scrollbar
+                width: 7px
 
             .inner
               min-height: 40px
